
  [ Michael Biebl ]
  * Stop using a doc symlink for the dbg package. The space savings are
    negligible and they are prone to cause problems. In case of
    python-gobject-dbg, which was converted to a transitional package, the
    symlink was mistakenly converted to a real directory which isn't handled
    nicely by dpkg. (Closes: #700779)

 -- Michael Biebl <biebl@debian.org>  Thu, 21 Feb 2013 23:48:57 +0100

pygobject (3.4.2-2) experimental; urgency=low

  * Drop quilt (not necessary, we are using 3.0 (quilt) source format), and
    dh_autoreconf (we have no patches).
  * Greatly simplify debian/rules, by switching to dh7 build system and
    factorizing the per-flavor rules in a simpler and better way. Also move to
    dh compat 9 to get multiarch compatible library directories.
  * debian/control.in: Bump g-i requirement according to upstream
    configure.ac.
  * debian/control.in: Drop support for Python 2.6. It's going to be dropped
    after Wheezy anyway, it receives zero testing by upstream and will soon be
    dropped upstream anyway.
  * debian/rules: Use py3versions --supported instead of --requested; the
    former is broken right now and we don't request particular versions anyway.
  * debian/control.in: Add missing ${misc:Pre-Depends} and versioned dpkg-dev
    build dependency.

 -- Martin Pitt <mpitt@debian.org>  Tue, 27 Nov 2012 16:15:23 +0100

pygobject (3.4.2-1) experimental; urgency=low

  * New upstream release.

 -- Martin Pitt <mpitt@debian.org>  Tue, 13 Nov 2012 05:57:56 +0100

pygobject (3.4.1.1-1) experimental; urgency=low

  [ Martin Pitt ]
  * New upstream release.
  * debian/control.in: Bump g-i dependencies according to configure.ac.
  * debian/rules: Remove moving of site-packages, this was fixed upstream now.

  [ Matthias Klose ]
  * Fix renaming of python3 extensions.
  * Configure with --disable-silent-rules.
  * debian/rules (clean): Remove __pycache__ directories.
